# GUI-calculator

./: CMakeLists.txt  README.md
src/: main.cpp
src/GUI/: gui.cpp  gui.h
src/GUI/keyboard/: keyboard.cpp  keyboard.h
src/GUI/keyboard/key/: key.cpp  key.h
src/GUI/screen/: screen.cpp  screen.h
src/lexer/: lexer.cpp  lexer.h
src/logger/: logger.cpp  logger.h
src/parser/: Node.cpp  Node.h  parser.cpp  parser.h
src/styles/GUI/: gui.qss
src/styles/key/: key.qss
src/styles/keyboard/: keyboard.qss
src/styles/screen/: screen.qss
src/token/: dynamicTokenTemplate.h  token.cpp  token.h
